--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <div class=dice-container>
-      <img value=0 onclick=keep(this) class=dice draggable=false width=128 src=images/1.png>
-      <img value=1 onclick=keep(this) class=dice width=128 src=images/1.png>
-      <img value=2 onclick=keep(this) class=dice width=128 src=images/1.png>
-      <img value=3 onclick=keep(this) class=dice width=128 src=images/1.png>
-      <img value=4 onclick=keep(this) class=dice width=128 src=images/1.png>
+      <img value=0 ondragstart="return false" onclick=keep(this) class=dice width=128 src=images/1.png>
+      <img value=1 ondragstart="return false" onclick=keep(this) class=dice width=128 src=images/1.png>
+      <img value=2 ondragstart="return false" onclick=keep(this) class=dice width=128 src=images/1.png>
+      <img value=3 ondragstart="return false" onclick=keep(this) class=dice width=128 src=images/1.png>
+      <img value=4 ondragstart="return false" onclick=keep(this) class=dice width=128 src=images/1.png>
     </div>
     <div>
       <button onclick=rollAll()>Slå alla tärningar</button>
